@@ -15,7 +15,11 @@ section-table-tests.ok: gen-md-tests section-table-tests.md simple-assembly.exe
 	./gen-md-tests section-table-tests.md
 	touch section-table-tests.ok
 
-generate-stamp: header-tests.ok section-table-tests.ok
+data-directory-tests.ok: gen-md-tests data-directory-tests.md simple-assembly.exe
+	./gen-md-tests data-directory-tests.md
+	touch data-directory-tests.ok
+
+generate-stamp: header-tests.ok section-table-tests.ok data-directory-tests.ok
 	touch generate-stamp
 
 clean-stamps:
