@@ -1,5 +1,13 @@
 2009-03-12 Rodrigo Kumpera  <rkumpera@novell.com>
 
+	* gen-md-tests.c (parse_test_entry): Fix multi effect rules.
+
+	* Makefile: Add rules for data-directory-tests.md.
+	
+	* data-directory-tests.md: New tests for data directories.
+
+2009-03-12 Rodrigo Kumpera  <rkumpera@novell.com>
+
 	* section-table-tests.md: Test for flags.
 
 2009-02-05 Rodrigo Kumpera  <rkumpera@novell.com>
